--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.android.support:appcompat-v7:27.1.0'
     compile 'com.google.firebase:firebase-appindexing:11.8.0'
