--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,37 @@
 
 buildscript {
     repositories {
-        maven { url "https://maven.google.com" }
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.1'
     }
 }
 
 allprojects {
     repositories {
-        maven { url "https://maven.google.com" }
+        google()
         jcenter()
     }
+}
+
+ext {
+
+    buildTools = "27.0.3"
+    compileSdk = 27
+    targetSdk = 27
+    minSdk = 21
+
+    supportLibVersion = "27.1.1"
+    playServicesAuthVersion = "11.8.0"
+    espressoVersion = "3.0.1"
+    androidTestVersion = "0.5"
+    hamcrestVersion = "1.3"
+    junitVersion = "4.12"
 }
 
 task clean(type: Delete) {
