--- a/base/build.gradle
+++ b/base/build.gradle
@@ -32,9 +32,7 @@ dependencies {
     api 'com.google.firebase:firebase-messaging:15.0.2'
     api 'com.google.firebase:firebase-appindexing:15.0.1'
     api 'com.google.firebase:firebase-core:15.0.2'
-
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    api 'com.google.android.instantapps:instantapps:1.1.0'
     api "com.android.support:appcompat-v7:$supportLibVersion"
     api "com.android.support:design:$supportLibVersion"
     api "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
