--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -30,15 +30,13 @@
 
                 <data
                     android:scheme="https"
-                    android:host="alburt.us"
-                    android:path="/default.html" />
+                    android:host="alburt.us" />
                 <data
                     android:scheme="http"
-                    android:host="alburt.us"
-                    android:path="/default" />
+                    android:host="alburt.us"/>
             </intent-filter>
             <meta-data android:name="default-url"
-                android:value="https://alburt.us/default" />
+                android:value="https://alburt.us" />
         </activity>
 
     </application>
