creating player roster and profile pages

--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -21,5 +21,6 @@
                 android:pathPrefix="/news.html" />
         </intent-filter>
     </activity>
+        <activity android:name="com.wbmd.appindexingpoc.ProfileDetailsActivity"/>
 </application>
 </manifest>
