--- a/news/build.gradle
+++ b/news/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    implementation 'net.cachapa.expandablelayout:expandablelayout:2.8'
 
     implementation project(':base')
     testImplementation 'junit:junit:4.12'
