--- a/news/src/main/AndroidManifest.xml
+++ b/news/src/main/AndroidManifest.xml
@@ -1,26 +1,105 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wbmd.appindexingpoc.news" >
+    package="com.wbmd.appindexingpoc.news">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-    <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity">
-        <intent-filter android:autoVerify="true">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
+        <meta-data
+            android:name="asset_statements"
+            android:resource="@string/asset_statements" />
 
-            <data
-                android:scheme="http"
-                android:host="alburt.us"
-                android:pathPrefix="/news.html" />
-            <data
-                android:scheme="https"
-                android:host="alburt.us"
-                android:pathPrefix="/news.html" />
-        </intent-filter>
-    </activity>
-        <activity android:name="com.wbmd.appindexingpoc.activity.ProfileDetailsActivity"/>
-</application>
+        <activity android:name="com.wbmd.appindexingpoc.activity.BaseActivity">
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="alburt.us"
+                    android:pathPrefix="/directory.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="alburt.us"
+                    android:pathPrefix="/directory.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="alburt.us"
+                    android:pathPrefix="/directory.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="alburt.us"
+                    android:pathPrefix="/directory.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="alburt.us"
+                    android:pathPrefix="/valilind.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="http"
+                    android:host="alburt.us"
+                    android:pathPrefix="/valilind.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="alburt.us"
+                    android:pathPrefix="/directory.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="alburt.us"
+                    android:pathPrefix="/valilind.html" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity"/>
+        <activity android:name="com.wbmd.appindexingpoc.activity.ProfileDetailsActivity" />
+    </application>
 </manifest>
