--- a/instant/build.gradle
+++ b/instant/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.instantapp'
 
 dependencies {
     implementation project(':base')
-    implementation project(":news")
+    implementation project(':directory')
     implementation project(":stories")
 
 
