trying to fix links to release to google play for testing

--- a/stories/src/main/AndroidManifest.xml
+++ b/stories/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
     package="com.wbmd.appindexingpoc.stories">
 
     <application>
+        <!--<meta-data-->
+            <!--android:name="asset_statements"-->
+            <!--android:resource="@string/asset_statements" />-->
         <meta-data
             android:name="asset_statements"
             android:resource="@string/asset_statements" />
