--- a/directory/src/main/AndroidManifest.xml
+++ b/directory/src/main/AndroidManifest.xml
@@ -16,90 +16,24 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:scheme="http"
-                    android:host="alburt.us"
-                    android:pathPrefix="/directory.html" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                  <data  android:host="alburt.us" />
+                   <data android:pathPrefix="/directory.html" />
             </intent-filter>
-            <intent-filter android:autoVerify="true">
+            <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:scheme="http"
-                    android:host="alburt.us"
-                    android:pathPrefix="/directory.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="https"
-                    android:host="alburt.us"
-                    android:pathPrefix="/directory.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="https"
-                    android:host="alburt.us"
-                    android:pathPrefix="/directory.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="http"
-                    android:host="alburt.us"
-                    android:pathPrefix="/valilind.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="http"
-                    android:host="alburt.us"
-                    android:pathPrefix="/valilind.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="https"
-                    android:host="alburt.us"
-                    android:pathPrefix="/directory.html" />
-            </intent-filter>
-            <intent-filter android:autoVerify="true">
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:scheme="https"
-                    android:host="alburt.us"
-                    android:pathPrefix="/valilind.html" />
+                <data  android:scheme="https" />
+                <data android:scheme="http" />
+                   <data android:host="alburt.us" />
+                   <data android:pathPrefix="/valilind.html" />
             </intent-filter>
         </activity>
-        <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity"/>
+        <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity" />
         <activity android:name="com.wbmd.appindexingpoc.activity.ProfileDetailsActivity" />
     </application>
 </manifest>
