--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
             <meta-data
                 android:name="default-url"
-                android:value="https://alburt.us" />
+                android:value="https://alburt.us/directory.html" />
 
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
@@ -39,6 +39,8 @@
                 <data android:scheme="http" />
                 <data android:host="alburt.us" />
                 <data android:scheme="https" />
+                <data android:pathPrefix="/directory.html" />
+
             </intent-filter>
         </activity>
 
