--- a/directory/src/main/AndroidManifest.xml
+++ b/directory/src/main/AndroidManifest.xml
@@ -1,15 +1,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wbmd.appindexingpoc.directory">
 
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application>
+    <application
+        android:allowBackup="false"
+        android:fullBackupContent="false"
+        android:hardwareAccelerated="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/launcher_icon"
+        android:supportsRtl="false"
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="asset_statements"
             android:resource="@string/asset_statements" />
 
         <activity android:name="com.wbmd.appindexingpoc.activity.BaseActivity">
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <meta-data
+                android:name="default-url"
+                android:value="https://alburt.us/directory.html" />
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
