--- a/installed/build.gradle
+++ b/installed/build.gradle
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation project(':base')
+//    implementation project(':base')
     implementation project(':directory')
     implementation project(":stories")
 }
