--- a/instant/build.gradle
+++ b/instant/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.instantapp'
 
 dependencies {
-    implementation project(':base')
+//    implementation project(':base')
     implementation project(':directory')
     implementation project(":stories")
 
