--- a/directory/src/main/AndroidManifest.xml
+++ b/directory/src/main/AndroidManifest.xml
@@ -6,13 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:allowBackup="false"
-        android:fullBackupContent="false"
-        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@drawable/launcher_icon"
-        android:supportsRtl="false"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="asset_statements"
@@ -37,7 +33,7 @@
                   <data  android:host="alburt.us" />
                    <data android:pathPrefix="/directory.html" />
             </intent-filter>
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -48,8 +44,31 @@
                    <data android:host="alburt.us" />
                    <data android:pathPrefix="/valilind.html" />
             </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data  android:host="alburt.us" />
+                <data android:pathPrefix="/valililind.html" />
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data  android:host="alburt.us" />
+                <data android:pathPrefix="/valilililind.html" />
+            </intent-filter>
         </activity>
-        <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity" />
+        <activity android:name="com.wbmd.appindexingpoc.activity.MainDirectoryActivity">
+        </activity>
         <activity android:name="com.wbmd.appindexingpoc.activity.ProfileDetailsActivity" />
         <activity android:name="com.wbmd.appindexingpoc.activity.ExtraItemActivity" />
     </application>
